Freedom Sanbox Ant Deploy/src/objects/Execution_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <picklist>
            <picklistValues>
                <fullName>Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Action_Amount__c</fullName>
        <label>Actual Action Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Add_on_Status__c</fullName>
        <label>Add on Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sanctioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disbursed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agreed_Amount_Base_Amount__c</fullName>
        <label>Agreed Amount Base Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Agreed_Amount_Per_Installment__c</fullName>
        <label>Agreed Amount Per Installment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreed_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Agreed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreed_General_Insurance_Company_Name__c</fullName>
        <label>Agreed General Insurance Company Name</label>
        <picklist>
            <picklistValues>
                <fullName>Bajaj Allianz General Insurance Co. Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICICI Lombard General Insurance Co. Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IFFCO Tokio General Insurance Co. Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reliance General Insurance Co. Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tata AIG General Insurance Co. Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cholamandalam MS General Insurance Co. Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC ERGO General Insurance Co. Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Generali India Insurance Company Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Universal Sompo General Insurance Co. Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shriram General Insurance Company Limited,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bharti AXA General Insurance Company Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raheja QBE General Insurance Company Limited,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBI General Insurance Company Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L&amp;T General Insurance Company Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magma HDI General Insurance Company Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liberty Videocon General Insurance Company Limite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star Health and Allied Insurance Company Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apollo Munich Health Insurance Company Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Max Bupa Health Insurance Company Ltd.2nd Floor, Salcon Rasvilas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Religare Health Insurance Company Limited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agreed_Installments__c</fullName>
        <label>Agreed Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreed_Life_Insurance_Company_Name__c</fullName>
        <label>Agreed Life Insurance Company Name</label>
        <picklist>
            <picklistValues>
                <fullName>Bajaj Allianz Life Insurance Company Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Birla Sun Life Insurance Co. Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HDFC Standard Life Insurance Co. Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICICI Prudential Life Insurance Co. Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ING Vysya Life Insurance Company Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance Corporation of India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Max Life Insurance Co. Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PNB Metlife India Insurance Co. Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kotak Mahindra Old Mutual Life Insurance Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SBI Life Insurance Co. Ltd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tata AIA Life Insurance Company Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reliance Life Insurance Company Limited.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aviva Life Insurance Company India Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sahara India Life Insurance Co, Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shriram Life Insurance Co, Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bharti AXA Life Insurance Company Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Generali India Life Insurance Company Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDBI Federal Life Insurance Company Ltd.,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canara HSBC Oriental Bank of Commerce Life Insurance Company Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEGON Religare Life Insurance Company Limited.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DLF Pramerica Life Insurance Co. Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Star Union Dai-ichi Life Insurance Co. Ltd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IndiaFirst Life Insurance Company Limited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edelweiss Tokio Life Insurance Co. Ltd.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agreed_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreed Product</label>
        <referenceTo>Product_Master__c</referenceTo>
        <relationshipLabel>Execution Tracker</relationshipLabel>
        <relationshipName>Execution_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreed_Scheme_Name_From__c</fullName>
        <label>Agreed Scheme Name From</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agreed_Scheme_Name_to__c</fullName>
        <label>Agreed Scheme Name to</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annualised_Premium_Amount__c</fullName>
        <formula>IF (ISPICKVAL(Mode__c , &quot;Annual&quot;) ,Gross_Premium__c*12,
IF (ISPICKVAL(Mode__c , &quot;Semi-Annual&quot;),Gross_Premium__c*6 ,

IF (ISPICKVAL(Mode__c , &quot;Quarterly&quot;),Gross_Premium__c*3 ,

IF (ISPICKVAL(Mode__c , &quot;Monthly&quot;),Gross_Premium__c*1 ,null))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annualised Premium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_No__c</fullName>
        <label>Application No</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <picklist>
            <picklistValues>
                <fullName>Opened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forms Provided to MET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forms Handed over to Ops</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approve_Action_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approve Action Plan</label>
        <referenceTo>Approve_Action_Plan__c</referenceTo>
        <relationshipLabel>Execution Tracker</relationshipLabel>
        <relationshipName>Execution_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset_Class_Policy_Type__c</fullName>
        <label>Asset Class/Policy Type</label>
        <picklist>
            <picklistValues>
                <fullName>Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whole Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endowment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ULIP - Debt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pension Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money-Back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Householder&apos;s</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guarnteed Renewable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ULIP - Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical Illness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Accident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ULIP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AssignToOps__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AssignToOps</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balance_Remaining__c</fullName>
        <formula>Agreed_Amount__c -  Executed_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bank_NBFC_Name__c</fullName>
        <label>Bank / NBFC Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bond_Type__c</fullName>
        <label>Bond Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booked_Revenue__c</fullName>
        <label>Booked Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Branch_Address__c</fullName>
        <label>Branch Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancelled_Reason__c</fullName>
        <label>Cancelled Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cheque_Amount__c</fullName>
        <label>Cheque Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cheque_No__c</fullName>
        <label>Cheque No</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Communication_Address__c</fullName>
        <label>Communication Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company Name</label>
        <referenceTo>Product_Manufacturer_Master__c</referenceTo>
        <relationshipLabel>Execution Tracker</relationshipLabel>
        <relationshipName>Execution_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOB_Guardian__c</fullName>
        <label>DOB - Guardian(DD/MM/YYYY)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOB_Second_holder__c</fullName>
        <label>DOB (Second holder)(DD/MM/YYYY)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOB_Third_holder__c</fullName>
        <label>DOB (Third holder) (DD/MM/YYYY)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Add in the Premium Amount for LI and GI</description>
        <label>Comments/Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Documents_received_date__c</fullName>
        <label>Documents received date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ET_Status__c</fullName>
        <label>ET Status</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned to MET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assigned to Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Entity_Name__c</fullName>
        <label>Entity Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Execution Tracker</relationshipLabel>
        <relationshipName>Execution_Tracker</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <formula>Approve_Action_Plan__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executed_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Executed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Executed_Product_Name__c</fullName>
        <label>Executed Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executed_Product__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Executed Product</label>
        <referenceTo>Product_Master__c</referenceTo>
        <relationshipLabel>Execution Tracker (Executed Product)</relationshipLabel>
        <relationshipName>Execution_Tracker1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Execution_Tracker_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Execution Tracker Product</label>
        <referenceTo>Product_Master__c</referenceTo>
        <relationshipLabel>Execution Tracker (Execution Tracker Product)</relationshipLabel>
        <relationshipName>Execution_Tracker4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Existing_Loan__c</fullName>
        <label>Existing Loan</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Folio_No__c</fullName>
        <label>Folio No</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal_Name__c</fullName>
        <formula>IF(ISPICKVAL(Type__c,&apos;Life Insurance&apos;) ,&apos;LIfe Insurance&apos;, 
IF(ISPICKVAL(Type__c,&apos;General Insurance&apos;) ,&apos;General Insurance&apos;,IF(ISPICKVAL(Type__c,&apos;Surrender Insurance&apos;) ,&apos;Surrender Insurance&apos;, 
IF(ISPICKVAL(Type__c,&apos;Loan&apos;) ,&apos;Loan&apos;, 
IF(ISPICKVAL(Type__c,&apos;Fixed Deposit&apos;) ,&apos;Fixed Deposit&apos;, 
IF(ISPICKVAL(Type__c,&apos;Bond&apos;) ,&apos;Bond&apos;,
IF((NOT( ISBLANK(Goal__c))),Goal__r.Description__c,&apos;Mutual Fund&apos;)))))))</formula>
        <label>Goal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Goal</label>
        <referenceTo>Goal__c</referenceTo>
        <relationshipLabel>Execution Tracker</relationshipLabel>
        <relationshipName>Execution_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gross_Premium__c</fullName>
        <label>Gross Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guardian_Name_In_case_nominee_is_minor__c</fullName>
        <label>Guardian Name (In case nominee is minor)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guardian_Name_as_PAN_card__c</fullName>
        <label>Guardian Name as PAN card(Minor Holder)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holder_Name__c</fullName>
        <label>Holder Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IFSC_Code__c</fullName>
        <label>IFSC Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Company__c</fullName>
        <label>Insurance Company</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Insured_Name__c</fullName>
        <label>Insured Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insured__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Rate_Offered__c</fullName>
        <label>Interest Rate Offered</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Investor_Name_As_in_bank_record__c</fullName>
        <label>Investor Name (As in bank record)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Investor_Name_as_in_PAN_card__c</fullName>
        <label>Investor (Name as in PAN card)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Floating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Floating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan_Type__c</fullName>
        <label>Loan Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_applied_on__c</fullName>
        <label>Loan applied on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_sanctioned_on__c</fullName>
        <label>Loan sanctioned on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Login_Date__c</fullName>
        <label>Login Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MICR_Code__c</fullName>
        <label>MICR Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Mode_Of_Payment__c</fullName>
        <label>Mode Of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <label>Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mode_of_holding__c</fullName>
        <label>Mode of holding</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Either or Survivor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mode_of_holding_in_bank_account__c</fullName>
        <label>Mode of holding in bank account</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Either or Survivor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Name_of_Second_holder__c</fullName>
        <label>Name of Second holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Third_holder__c</fullName>
        <label>Name of Third holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Premium__c</fullName>
        <label>Net Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Bonds_Applied__c</fullName>
        <label>No of Bonds Applied</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nominee__c</fullName>
        <label>Nominee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominee_s_DOB__c</fullName>
        <label>Nominee&apos;s DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nominee_s_Name__c</fullName>
        <label>Nominee&apos;s Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <picklist>
            <picklistValues>
                <fullName>Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Succession Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Tax Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lumpsum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsequent Investments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Option__c</fullName>
        <label>Option</label>
        <picklist>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividend Reinvestment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dividend Payout</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Original_Target_Date__c</fullName>
        <label>Original Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Insured_1_DOB__c</fullName>
        <label>Other Insured 1 DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Insured_1_Gender__c</fullName>
        <label>Other Insured 1 Gender</label>
        <picklist>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Insured_1_Name__c</fullName>
        <label>Other Insured 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Insured_2_DOB__c</fullName>
        <label>Other Insured 2 DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Insured_2_Gender__c</fullName>
        <label>Other Insured 2 Gender</label>
        <picklist>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Insured_2_Name__c</fullName>
        <label>Other Insured 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Insured_3_DOB__c</fullName>
        <label>Other Insured 3 DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other_Insured_3_Gender__c</fullName>
        <label>Other Insured 3 Gender</label>
        <picklist>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Insured_3_Name__c</fullName>
        <label>Other Insured 3 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overdue__c</fullName>
        <formula>IF(AND(( Completion_Date__c =NULL),( Original_Target_Date__c =NULL)),0,(IF((Completion_Date__c =NULL), (TODAY() - Original_Target_Date__c) ,(Completion_Date__c - Original_Target_Date__c))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overdue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Execution_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAN_No_Guardian__c</fullName>
        <label>PAN No. (Guardian)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAN_No_Second_holder__c</fullName>
        <label>PAN No. (Second holder)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAN_No_Third_holder__c</fullName>
        <label>PAN No. (Third holder)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAN__c</fullName>
        <label>PAN</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentExecutionTracker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Execution Tracker</label>
        <referenceTo>Execution_Tracker__c</referenceTo>
        <relationshipLabel>Related Execution Tracker</relationshipLabel>
        <relationshipName>Execution_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Period_in_Months__c</fullName>
        <label>Period in Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pol_Doc_Recd_Status__c</fullName>
        <label>Pol Doc Recd Status</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Policy_Document_received_date__c</fullName>
        <label>Policy Document received date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Policy_Name__c</fullName>
        <label>Policy Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <label>Policy Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>